# AIP

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/aip_core/: __init__.py  config.py  content_safety.py  i18n.py  main.py
src/aip_core/agents/: __init__.py  _crew_runner.py  content_agents.py  course_architect_agent.py  digital_human_agent.py  ip_agent.py  packager.py  requirement_agent.py  review_agent.py  voice_agent.py
src/aip_core/api/: __init__.py  digital_human_p0.py
src/aip_core/digital_human/: __init__.py  runninghub_client.py
src/aip_core/digital_human_p0/: __init__.py  core.py  wavespeed_client.py
src/aip_core/graph/: __init__.py  builder.py  state.py
src/aip_core/mcp_servers/: __init__.py  registry.py
src/aip_core/static/: index.html
src/aip_core/tools/: __init__.py  llm_factory.py  mcp_tools.py  tts_factory.py
tests/: conftest.py  test_digital_human_p0_batch.py
